archivecenter 添加health接口 检查服务状态

--- a/chainmaker-repo/chainmaker-archive-service/Makefile
+++ b/chainmaker-repo/chainmaker-archive-service/Makefile
@@ -3,3 +3,13 @@ ut:
 
 lint:
 	golangci-lint run ./...
+
+
+CUR_TIME:= $(shell date +"%Y%m%d%H%M")
+IMAGE_VERSION:=v$(CUR_TIME)
+IMAGE_NAME:=ubuntu/archivecenter/app-server:$(IMAGE_VERSION)
+
+build:
+	docker buildx build -t "$(IMAGE_NAME)" --no-cache  .
+	@echo "Image Name: $(IMAGE_NAME)"
+	@echo "done"
